feat: 接入stylelint 代码格式化采用Prettier, 修复代码的格式化问题

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -71,5 +71,5 @@ each(@marginList, {
 }
 
 body {
-  font-family: 'Microsoft Yahei', PingFangSC-Regular, sans-serif;;
+  font-family: 'Microsoft Yahei', PingFangSC-Regular, sans-serif;
 }
