--- a/src/styles/color.less
+++ b/src/styles/color.less
@@ -1,10 +1,11 @@
-
 @theme-color: #2979ff;
 
-@border-color: #DCDFE6;
+@border-color: #dcdfe6;
 
 /** 主要文字颜色 **/
+
 @text-color: #303133;
 
 /** 次要文字颜色 **/
+
 @text-color-second: #909399;
