--- a/src/styles/vant-theme.less
+++ b/src/styles/vant-theme.less
@@ -1,7 +1,9 @@
 :root {
   --van-tabs-bottom-bar-color: @theme-color;
   --van-tabbar-item-font-size: var(--van-font-size-md);
-  --van-dropdown-menu-title-active-text-color: #1989fa;
-  --van-dropdown-menu-option-active-color: #1989fa;
+  --van-dropdown-menu-title-active-text-color: @theme-color;
+  --van-dropdown-menu-option-active-color: @theme-color;
   --van-dropdown-menu-box-shadow: none;
+  --van-tree-select-item-active-color: @theme-color;
+  --van-sidebar-selected-border-color: @theme-color;
 }
